--- a/src/app/events/cricketmatchs/team-view/team-view.component.css
+++ b/src/app/events/cricketmatchs/team-view/team-view.component.css
@@ -1,9 +1,8 @@
-table tr th {
-    text-align: left;
-}
+
 .card-body{
-    margin: 1em;
+    margin: 1em auto;
 }
 #card{
    margin-bottom: 1em;
 }
+
