--- a/src/app/events/delete-employee/delete-employee.component.html
+++ b/src/app/events/delete-employee/delete-employee.component.html
@@ -55,6 +55,6 @@
     <div class="row">
       <div class="col-md-6"></div>
     <div class="col-md-2">
-    <button type="button" class="btn btn-primary">Delete Employee</button>
+    <button type="button" class="btn btn-primary" (click)="deleteEmployee()">Delete Employee</button>
     </div>
     </div>
