--- a/src/app/events/select-attribute/select-attribute.component.html
+++ b/src/app/events/select-attribute/select-attribute.component.html
@@ -1,7 +1,7 @@
-<div >
+<div class="wrapper  col-md-8 container" >
         
   
-    <div id="formContent" >
+    <div id="formContent" class="col-md-10">
       <!-- Tabs Titles -->
   
       <!-- Icon -->
