--- a/src/app/events/view-poll/view-poll.component.html
+++ b/src/app/events/view-poll/view-poll.component.html
@@ -1,3 +1,5 @@
 <p>
-  view-poll works!
+    <button type="button" class="btn btn-success" (click)="vote()">Vote</button> 
+    <button type="button" class="btn btn-success" (click)="removePoll()">Remove poll</button> 
+
 </p>
