--- a/src/app/profile/signup-employee/signup-employee.component.html
+++ b/src/app/profile/signup-employee/signup-employee.component.html
@@ -81,7 +81,7 @@
                     <label >Enter City </label>
                     <em *ngIf="validateControl('address1') && hasError('address1', 'required')">*City is required</em>
                     <em *ngIf="validateControl('address1') && hasError('address1', 'maxlength')">*Maximum allowed length is 6 characters.</em>
-           
+                    Add a Profile picture
                 </div>
                 <div class="form-group col-md-6">
                       <!-- <input  placeholder="Address Lane" class="form-control" type="text" formControlName="address2" id="address2"> -->
