--- a/src/app/pastevent/imageview/imageview.component.css
+++ b/src/app/pastevent/imageview/imageview.component.css
@@ -66,3 +66,11 @@
       padding-bottom: 25%;
     }
   }
+.comment {
+  position: sticky;
+}
+
+#author {
+  font-style: italic;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
