--- a/src/app/pastevent/imageview/imageview.component.html
+++ b/src/app/pastevent/imageview/imageview.component.html
@@ -34,9 +34,10 @@
 
 <div class="card w-90">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <h2 class="card-title">{{eevent.eventTitle}}</h2>
+    
     <button class="btn" (click)=gotoimageupload(eventId)>Image Upload</button>  
+   
     <div class="row">
       <div class="col-sm-12 col-md-9">
         <section class="no-touch">
@@ -44,12 +45,13 @@
             <div *ngFor="let i of result">
               <div class="box">       
                 <div class="boxInner">
-                  <img id="zoom2"  class="images card w-100" [src]="ImageUrl+i.imageId" alt="Cinque Terre">
-                    {{i.author}}
+                  <img id="zoom2"  class="images card w-100" [src]="ImageUrl+i.imageId"   alt="Cinque Terre">
+                   <a id="author"> {{i.author}} </a>
                  
-                  <div  class="titleBox"> <button  (click)=deleteimage(i.imageId) id="btn">delete </button></div>
+                  <div  class="titleBox"> <button *ngIf="i.EmployeeId==author"  (click)=deleteimage(i.imageId) id="btn">delete </button></div>
                 </div>
-                
+                 
+
               </div>
               
             </div>
@@ -66,6 +68,9 @@
 
   </div>
 </div>
+
+
+
 
 
 
