Routing with logos

--- a/src/app/pastevent/comment/comment.component.html
+++ b/src/app/pastevent/comment/comment.component.html
@@ -26,7 +26,7 @@
 					</header>
 					<div *ngFor="let e of comment">
 						<div class="comment">
-							<div class="username">{{e.empName}} {{e.commentTime|date:'medium'}}</div>
+							<div class="username">{{e.empName}}</div>
 				
 							<img [src]="ImageUrl+e.empProfilePicture" class="avatar" alt="user image" />
 				
