--- a/src/app/pastevent/imageview/imageview.component.css
+++ b/src/app/pastevent/imageview/imageview.component.css
@@ -74,3 +74,7 @@
   font-style: italic;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+#x{
+opacity: 100%;
+
+}
